--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -1,6 +1,35 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "compagnonlight";
+}
+
 .board {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    width: 150px;
+    width: 318px;
+    position: fixed;
+}
+
+.game {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: rgb(238, 174, 202);
+    background: radial-gradient(
+        circle,
+        rgba(238, 174, 202, 1) 0%,
+        rgba(148, 187, 233, 1) 25%
+    );
+}
+
+body,
+html,
+#root {
+    height: 100%;
+    width: 100%;
 }
