--- a/src/components/WinOverlay.module.css
+++ b/src/components/WinOverlay.module.css
@@ -9,17 +9,39 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: fadein 0.5s;
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .winner {
     height: 300px;
     width: 500px;
+    font-size: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    border-radius: 25%;
-    backdrop-filter: blur(10px);
-    background-color: rgba(209, 117, 132, 0.5);
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 30px;
+    backdrop-filter: blur(5px);
+    background-color: rgba(238, 174, 202, 0.6);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.button {
+    height: 20%;
+    width: 30%;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    backdrop-filter: blur(5px);
+    background: rgba(148, 187, 233, 1);
+    border: none;
+    font-size: 25px;
 }
