--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -33,3 +33,10 @@ html,
     height: 100%;
     width: 100%;
 }
+
+@font-face {
+    font-family: "compagnonlight";
+    src: url("../compagnon-light-webfont.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
